# llm.cpp

./: .gitignore  CMakeLists.txt  README_cn.md  bak_Makefile  train_gpt2.py
dev/src/: cpu_train_gpt_main.cpp  main.cpp  param.h
